# aquila

./: CMakeLists.txt
aquila/: global.h
aquila/filter/: MelFilter.cpp  MelFilter.h  MelFilterBank.cpp  MelFilterBank.h
aquila/source/: SignalSource.h  WaveFile.cpp  WaveFile.h  WaveFileHandler.cpp  WaveFileHandler.h  WaveHeader.h
aquila/transform/: Lifter.cpp  Lifter.h  Mfcc.cpp  Mfcc.h
lib/: CMakeLists.txt
